--- a/options/SUPIR_v0.yaml
+++ b/options/SUPIR_v0.yaml
@@ -149,9 +149,9 @@ model:
         unreal engine, blurring, dirty, messy, worst quality, low quality, frames, watermark, signature, 
         jpeg artifacts, deformed, lowres, over-smooth'
 
-SDXL_CKPT: ~
+SDXL_CKPT: /root/users/ai_n_zag/SUPIR/weights/sd_xl_base_1.0_0.9vae.safetensors
 SUPIR_CKPT_F: ~
-SUPIR_CKPT_Q: ~
+SUPIR_CKPT_Q: /root/users/ai_n_zag/SUPIR/weights/SUPIR-v0Q.ckpt
 SUPIR_CKPT: ~
 
 default_setting:
